# cookiecutter-fast-drf

./: .gitignore  README.rst  cookiecutter.json  pyproject.toml
cookiecutter.project_slug/: .flake8  .gitlab-ci.yml  README.rst  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
cookiecutter.project_slug/cookiecutter_fast_drf/config/settings/: base.py  dev.py  prod.py  secret.py  test.py
cookiecutter.project_slug/cookiecutter_fast_drf/core/: apps.py
cookiecutter.project_slug/docker/: Dockerfile_postgres  Dockerfile_python
cookiecutter.project_slug/src/: manage.py
cookiecutter.project_slug/src/config/: wsgi.py
cookiecutter.project_slug/src/config/settings/: base.py  dev.py  preprod.py  secret.py
cookiecutter.project_slug/src/cookiecutter_fast_drf/: asgi.py  settings.py  urls.py  wsgi.py
cookiecutter.project_slug/src/cookiecutter_fast_drf/settings/: base.py  prod.py  secret.py  test.py
cookiecutter.project_slug/src/core/: admin.py  email.py  factories.py  models.py
cookiecutter.project_slug/src/core/migrations/: 0001_initial.py
cookiecutter.project_slug/src/core/templates/: password_reset.html
cookiecutter.project_slug/tests/: conftest.py  test_project_slug.py  utils.py
cookiecutter.project_slug/tests/test_core/: test_factories.py
tests/: test_cookiecutter_fast_drf.py
{{cookiecutter.project_slug}}/: .env  .gitignore  .gitlab-ci.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: django.yml  secret.py
{{cookiecutter.project_slug}}/docker/: Dockerfile_python
{{cookiecutter.project_slug}}/scripts/: checks.sh  pre_commit.sh
{{cookiecutter.project_slug}}/tests/: conftest.py  utils.py
{{cookiecutter.project_slug}}/tests/test_core/: test_factories.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: asgi.py  settings.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py  preprod.py  prod.py  secret.py  test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: admin.py  exceptions.py  factories.py  models.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/templates/email/: activation.html
