[tool.poetry]
name = "cookiecutter-fast-drf"
version = "0.1.0"
description = "The Fast Django Rest Framework cookicutter"
authors = ["Nico Deforge <me@nicolasdeforge.io>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "1.7.3"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
