[tool.poetry]
name = "add_lib"
version = "0.1.0"
description = "The Fast Django Rest Framework cookicutter"
authors = ["Nico Deforge <me@nicolasdeforge.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2"
djangorestframework = "3.12.4"
djangorestframework-stubs = "1.4.0"
django-cleanup = "5.2.0"
django-filter = "2.4.0"
django-stubs = "1.8.0"
django-cors-headers = "3.7.0"
django-storages = "1.11.1"
djoser = "2.1.0"
drf-yasg = "1.20.0"
easy-thumbnails = "2.7.1"
factory-boy = "3.2.0"
psycopg2 = "2.8.6"

[tool.poetry.dev-dependencies]
black = "21.5b1"
django-debug-toolbar = "3.2.1"
flake8 = "3.9.2"
isort = "5.8.0"
mypy = "0.812"
pre-commit = "2.12.1"
pytest = "6.2.4"
pytest-cov = "2.12.0"
pytest-django = "4.3.0"
pytest-factoryboy = "2.1.0"
pytest-sugar = "0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]