[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "3.12.4"
djangorestframework-stubs = "1.4.0"
django-cleanup = "5.2.0"
django-environ = "0.4.5"
django-filter = "2.4.0"
django-import-export = "2.5.0"
django-stubs = "1.8.0"
django-cors-headers = "3.7.0"
django-storages = "1.11.1"
djoser = "2.1.0"
drf-yasg = "1.20.0"
easy-thumbnails = "2.7.1"
factory-boy = "3.2.0"
psycopg2 = "2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "21.7b0"
django-debug-toolbar = "3.2.2"
flake8 = "3.9.2"
isort = "5.9.3"
mypy = "0.910"
pre-commit = "2.12.1"
pytest = "6.2.4"
pytest-cov = "2.12.1"
pytest-django = "4.4.0"
pytest-factoryboy = "2.1.0"
pytest-sugar = "0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]